--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,7 @@
 ACCESS_TOKEN_SECRET = QPI83Jpafj380U3RJhPG492jig49tij0J0G
 REFRESH_TOKEN_SECRET = NAPph20anrhp948GHA047T0nt94nta5v76
+APP_PORT=5000
+HOST=localhost
+USER=root
+PASSWORD=
+DATABASE=gym_db
